# 3v3

./: .gitignore  README.md  bun.lockb  flake.nix  justfile  package.json  test.db
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 24bmj44xb2r54y37lkj95ki7j0qdx60i-source
crates/cloudflare-backend/: Cargo.toml  bun.lockb  wrangler.toml
crates/reducer/: Cargo.toml
crates/reducer/src/: lib.rs  test
docs/: explicação-sortable.md  manual_data_intervention.md  sala_de_espera.md  sortable-tree.md
migrations/: schema.sql
src/: db.ts  index.ts  schemas.ts
src/scripts/: migrate_csv.ts
